# cline_template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/.devcontainer/docker/: Dockerfile
{{cookiecutter.project_slug}}/.devcontainer/scripts/: setup_uv.sh
